# textual-emoji-picker

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
.github/workflows/: CI.yaml  pages.yaml  publish.yaml
demo/: app.py  demo.cast  record.sh  screenshot.py  serve.py
docs/: index.html
scripts/: generate_categories.py
src/textual_emoji_picker/: __init__.py  _widget.py
src/textual_emoji_picker/_data/: categories.json
tests/: test_data.py  test_widget.py
