[project]
name = "textual-emoji-picker"
version = "0.2.0"
description = "A searchable, categorised emoji picker widget for Textual TUI apps"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["textual", "tui", "emoji", "picker", "widget"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "textual>=1.0.0",
    "emoji>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/textual_emoji_picker"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.10",
    "ruff>=0.8",
    "pre-commit>=4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
strict = true
packages = ["textual_emoji_picker"]
mypy_path = "src"

[tool.ruff]
src = ["src", "tests"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
